--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1",
+    "nanoid": "^3.3.7",
+    "pug": "^3.0.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
