--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "morgan-body": "^2.6.9",
     "nanoid": "^3.3.7",
     "pug": "^3.0.2"
   },
